almost done but some small bugs remain on mobile

--- a/app/assets/scss/modules/_nav.scss
+++ b/app/assets/scss/modules/_nav.scss
@@ -5,7 +5,7 @@ nav {
   color: white;
   top: -1px;
   box-shadow: 0px 3px 3px black;
-  z-index: 1;
+  z-index: 2;
 
 
   #visible {
