--- a/app/assets/scss/modules/_portfolio.scss
+++ b/app/assets/scss/modules/_portfolio.scss
@@ -54,7 +54,7 @@
         opacity: 0;
         transition: .5s ease;
         border: 1px solid black;
-
+        z-index: -1;
 
         p {
           padding: 0 0.5em;
@@ -100,9 +100,7 @@
   @include hoverAnimation {
     .site-wrap:hover .description, .site-wrap:active .description  {
       opacity: 1;
-    }
-    .site-wrap:hover .site-img:hover, .site-wrap:active .site-img:active {
-      opacity: 0.3;
+      z-index: 1;
     }
     .site-wrap:hover .description, .site-wrap:active .description{
       border: 1px solid white;
@@ -110,13 +108,11 @@
 
   }
 
- // Applied to .description and .site-img respectively
+ // Applied to .description by JS
   #show-description  {
     opacity: 1;
     border: 1px solid white;
-  }
-   #fade-site-img {
-    opacity: 0.3;
+    z-index: 1;
   }
 
 }
